# audio-extraction-worker

./: .env  .gitignore  Dockerfile  README.md  base_util.py  config.py  docker-compose.yml  docker-entrypoint.sh  download.py  ffmpeg_util.py  io_util.py  main.py  main_data_processor.py  models.py  pyproject.toml  run.sh  run_pipeline.py  s3_util.py  transcode.py  worker.py
.github/workflows/: _deploy.yml  build-push-image.yml
config/: config.yml
scripts/: check-project.sh
tests/integration/: S3_integration_test.py
