[tool.poetry]
name = "audio-extraction-worker"
version = "0.2.0"
description = "Worker that extracts audio (.wav) from video"
authors = ["Dragos Alexandru Balan <d.a.balan@utwente.nl>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
validators = "^0.33.0"
boto3 = "^1.35.10"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
moto = "^5.0.13"
pytest = "^8.3.2"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"
black = "^24.8.0"
mypy = "^1.11.2"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
  "tests/integration",
]
addopts = [
  "--cov",
  "--ignore=tests/ignored",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | \.venv
    | misc
  )/
)
'''

[tool.mypy]
python_version = "3.11"
exclude = "misc"

[[tool.mypy.overrides]]
module = [
  'yaml',
  'boto3.*',
]
ignore_missing_imports = true
